# katas-in-python

./: README.md  pyproject.toml
src/kyu5_rgb_to_hex/: README.md  rgb.py
src/kyu6_bit_counting/: README.md  count_bits.py
src/kyu6_bomb_planted/: README.md  bomb_has_been_planted.py
src/kyu6_delete_occurrences/: README.md  delete_nth.py
src/kyu6_ip_validation/: README.md  is_valid_ip.py
src/kyu6_is_prime/: README.md  is_prime.py
src/kyu6_parity_outlier/: README.md  find_outlier.py
src/kyu6_persistent_bugger/: README.md  persistence.py
tests/: test_kyu5_rgb_to_hex.py  test_kyu6_bit_counting.py  test_kyu6_bomb_planted.py  test_kyu6_delete_occurrences.py  test_kyu6_ip_validation.py  test_kyu6_is_prime.py  test_kyu6_parity_outlier.py  test_kyy6_persistent_bugger.py  test_main.py
