[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kyu6_bit_counting"
version = "0.0.1"
authors = [
  { name="Stefan Boos", email="kontakt@boos.systems" },
]
description = "Code katas in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wonderbirds-katas/katas-in-python"
"Bug Tracker" = "https://github.com/wonderbirds-katas/katas-in-python/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]  
packages = ["src/kyu6_bit_counting"]
